2006-06-20  Henrique Romano  <henrique@async.com.br>

	* stoqdrivers/devices/printers/dataregis/EP375.py:

	Implementing has_opened_sale and has_opened_report on EP375Status.
	Adding an internal attribute for EP375 driver to manage the coupon
	status.	Fixing a bug on coupon_cancel, now the driver should works
	without more "invalid state" problems.

2006-06-20  Henrique Romano  <henrique@async.com.br>

	* stoqdrivers/devices/printers/dataregis/EP375.py:

	On totalize, the surcharge and discount values are given in percent.
	Also fixing a bug in get_remaining_value(), the coupon subtotal was 
	being calculated erroneously.

2006-06-19  Henrique Romano  <henrique@async.com.br>

	* tests/data/Bematech_MP25_FI-test_add_item.txt:
	* tests/data/Bematech_MP25_FI-test_add_payment.txt:
	* tests/data/Bematech_MP25_FI-test_cancel_coupon.txt:
	* tests/data/Bematech_MP25_FI-test_cancel_item.txt:
	* tests/data/Bematech_MP25_FI-test_close_coupon.txt:
	* tests/data/Bematech_MP25_FI-test_coupon_open.txt:
	* tests/data/Bematech_MP25_FI-test_till_add_cash.txt:
	* tests/data/Bematech_MP25_FI-test_till_remove_cash.txt:
	* tests/data/Bematech_MP25_FI-test_totalize.txt:

	Add tests data for Bematech MP25

2006-06-19  Henrique Romano  <henrique@async.com.br>

	* tests/base.py:

	Initial implementation of PlaybackPort

2006-01-16  Henrique Romano  <henrique@async.com.br>

	reviewed by: Evandro Vale Miquelito <evandro@async.com.br>

	* stoqdrivers/constants.py:
	* stoqdrivers/devices/base.py:
	* stoqdrivers/devices/printers/base.py:
	* stoqdrivers/devices/scales/base.py:
	* stoqdrivers/devices/scales/scales.py:

	BaseDevice implementation and code update, fix bug #2386
	
2006-01-10  Henrique Romano  <henrique@async.com.br>

	reviewed by: Johan Dahlin <jdahlin@async.com.br>>

	* stoqdrivers/constants.py:
	* stoqdrivers/devices/printers/bematech/MP25.py:
	* stoqdrivers/devices/printers/daruma/FS345.py:
	* stoqdrivers/devices/printers/dataregis/EP375.py: